Hero Heading and BTN added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
     <section class="hero-section">
         <div class="container">
             <div class="row">
+                <div class="col-md-6 offset-md-3 text-center hero-heading">
+
+                    <h1>Welcome To GUB Student Club</h1>
+                    <p>A Club to help each other and share study materials.</p>
+                    <button type="button" class="btn btn-success px-4">Join Club</button>
+
+                </div>
 
             </div>
         </div>
